--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="./estilo.css">
 
-<title>Curitiba</title>
+<title>Joao Pessoa</title>
 </head>
 <body>
 <header>
@@ -19,7 +19,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-	  <a class="navbar-brand" href="#">Curitiba</a>
+	  <a class="navbar-brand" href="#">Joao Pessoa</a>
 	  </div>
    <div class="collapse navbar-collapse" id="menu">
 <ul class="nav navbar-nav" >
