--- a/index.html
+++ b/index.html
@@ -43,26 +43,26 @@
 </div>
 
 <div id="p1"class="collapse">
-<p class="panel-body" > Curitiba é a capital do Paraná, um dos três Estados que compõem a Região Sul do Brasil. Sua fundação oficial data de 29 de março de 1693 </p>
+<p class="panel-body" > João Pessoa é a capital da Paraiba, um dos três Estados que compõem a Região Nordeste do Brasil. Sua fundação oficial data de 29 de março de 1585 </p>
 </div>
 </div>
 
 <div class="panel panel-default">
 <div class="panel-heading" data-parent="#painel-sobre" data-toggle="collapse" data-target="#p2">
-<h3 class="panel-title" > Terra do pinhão</h3>
+<h3 class="panel-title" > Onde o Sol Nasce Primeiro</h3>
 </div>
 
 <div id="p2"class="collapse">
-<p  class="panel-body"> Curitiba é uma palavra de origem Guarani: kur yt yba quer dizer "grande quantidade de pinheiros, pinheiral"</p>
+<p  class="panel-body"> João Pessoa, é uma cidade litorânea, com praias, clima agradável e rica oferta cultural."</p>
 </div>
 </div>
 <div class="panel panel-default">
 <div class="panel-heading" data-parent="#painel-sobre" data-toggle="collapse" data-target="#p3">
-<h3 class="panel-title"> O inverno em Curitiba</h3>
+<h3 class="panel-title"> O Verao em João Pessoa</h3>
 </div>
 <div id="p3"class="collapse">
-<p class="panel-body"> A temperatura média da cidade no inverno é de 13 °C, podendo chegar a números negativos nos dias mais frios, de madrugada e de manhã. 
-Os meses de julho e agosto são os mais frios do ano, mas também os menos chuvosos. As manhãs de inverno costumam vir acompanhadas de uma neblina matinal <br>
+<p class="panel-body"> O verão em João Pessoa é quente, com temperaturas elevadas e pouca chuva. 
+<br>
 fonte: ricmais.com.br
 </p>
 </div>
